fix scroll enter when not overflow. JT-78232 (#6594)

--- a/src/editable-heading/editable-heading.css
+++ b/src/editable-heading/editable-heading.css
@@ -131,6 +131,10 @@
   resize: none;
 }
 
+.textareaNotOverflow {
+  overflow: hidden;
+}
+
 .textareaFade {
   position: absolute;
   bottom: 0;
